# bmstu-aa-sem5

./: README.md
dz/: .gitignore
dz/tex/: 03-introduction.tex  04-analysis.tex  05-design.tex  08-conclusion.tex  biblio.bib  coursework.tex
lab_01/: .gitignore
lab_01/src/: algorithms.py  main.py  measurement.py
lab_01/tex/: 03-introduction.tex  04-analysis.tex  05-design.tex  06-implementation.tex  07-research.tex  08-conclusion.tex  biblio.bib  coursework.tex  coursework.xdy
lab_02/src/: CMakeCache.txt  CMakeLists.txt  alg.cpp  alg.h  graph.py  main.cpp  measure.cpp  measure.h  mtr.cpp  mtr.h
lab_02/tex/: 03-introduction.tex  04-analysis.tex  05-design.tex  06-implementation.tex  07-research.tex  08-conclusion.tex  biblio.bib  coursework.tex
lab_03/src/: functions.py  main.py  sorts.py
lab_03/tex/: 06-implementation.tex  07-research.tex
lab_04/src/: menu.py  tests.py
lab_04/tex/: 03-introduction.tex  04-analysis.tex  05-design.tex  08-conclusion.tex  biblio.bib  coursework.tex
lab_05/src/: CMakeLists.txt  graph.py  main.cpp  tf-idf.py
lab_05/src/data/in/: copydoc.sh
lab_05/src/in_out_file/: Document.cpp  Document.h  Term.cpp  Term.h  io.cpp  io.h
lab_05/src/klasters/: Claster.cpp  Claster.h  Klastering.cpp  Klastering.h  Kmeans.cpp  Kmeans.h
lab_05/src/thread/: Atomic.cpp  Atomic.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h
lab_05/tex/: 03-introduction.tex  04-analysis.tex  05-design.tex  06-implementation.tex  07-research.tex  08-conclusion.tex  09-appendix.tex  biblio.bib  coursework.tex
lab_06/src/: .gitignore  algorithms.py  menu.py  (+2 more)
(+109 files in other folders)
